Remove Ping in the list on demand