@@ -11,9 +11,11 @@ import io.camunda.cherry.db.entity.OperationEntity;
 import io.camunda.cherry.definition.AbstractConnector;
 import io.camunda.cherry.definition.AbstractRunner;
 import io.camunda.cherry.definition.AbstractWorker;
+import io.camunda.cherry.definition.IntFrameworkRunner;
 import io.camunda.cherry.definition.connector.SdkRunnerCherryConnector;
 import io.camunda.cherry.definition.connector.SdkRunnerConnector;
 import io.camunda.cherry.definition.connector.SdkRunnerWorker;
+import io.camunda.cherry.embeddedrunner.ping.PingIntRunner;
 import io.camunda.cherry.exception.OperationAlreadyStartedException;
 import io.camunda.cherry.exception.OperationAlreadyStoppedException;
 import io.camunda.cherry.exception.OperationException;
@@ -25,28 +27,38 @@ import io.camunda.cherry.runtime.SecretProvider;
 import io.camunda.cherry.zeebe.ZeebeConfiguration;
 import io.camunda.cherry.zeebe.ZeebeContainer;
 import io.camunda.connector.api.validation.ValidationProvider;
+import io.camunda.zeebe.client.api.response.ActivatedJob;
+import io.camunda.zeebe.client.api.worker.JobClient;
 import io.camunda.zeebe.client.api.worker.JobHandler;
 import io.camunda.zeebe.client.api.worker.JobWorker;
 import io.camunda.zeebe.client.api.worker.JobWorkerBuilderStep1;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 // https://docs.camunda.io/docs/components/best-practices/development/writing-good-workers/
 
 @Service
 public class JobRunnerFactory {
+
   public static final String RUNNER_NOT_FOUND = "RunnerNotFound";
 
   public static final String TOO_MANY_RUNNERS = "TooManyRunners";
   public static final String UNKNOWN_RUNNER_CLASS = "UnknownRunnerClass";
   public static final String RUNNER_INVALID_DEFINITION = "RUNNER_INVALID_DEFINITION";
+
+  @Value("${cherry.runners.embeddedrunner:true}")
+  private Boolean executeEmbeddedRunner;
+
+  @Value("${cherry.runners.pingrunner:true}")
+  private Boolean executePingRunner;
 
   Logger logger = LoggerFactory.getLogger(JobRunnerFactory.class.getName());
 
@@ -71,7 +83,8 @@ public class JobRunnerFactory {
   @Autowired
   SecretProvider secretProvider;
 
-  @Autowired ValidationProvider validationProvider;
+  @Autowired
+  ValidationProvider validationProvider;
 
   private static final ObjectMapper objectMapper = new ObjectMapper();
 
@@ -89,7 +102,7 @@ public class JobRunnerFactory {
     try {
       zeebeContainer.startZeebeeClient();
     } catch (TechnicalException e) {
-      logOperation.log(OperationEntity.Operation.ERROR, "Can't start zeebe Client "+e.getMessage());
+      logOperation.log(OperationEntity.Operation.ERROR, "Can't start zeebe Client " + e.getMessage());
       logger.error("ZeebeClient is not started, can't start runner");
       return;
     }
@@ -101,19 +114,52 @@ public class JobRunnerFactory {
 
     logOperation.log(OperationEntity.Operation.STARTRUNTIME, "");
 
+    resumeAllRunners();
+  }
+
+  /**
+   *
+   */
+  public void stopAll() {
+    logOperation.log(OperationEntity.Operation.STOPRUNTIME, "");
+
+    suspendAllRunners();
+    zeebeContainer.stopZeebeeClient();
+  }
+
+  /**
+   *
+   */
+  public void resumeAllRunners() {
     // get the list from the storage
     List<AbstractRunner> listRunners = runnerFactory.getAllRunners(new StorageRunner.Filter().isActive(true));
+    if (Boolean.FALSE.equals(executeEmbeddedRunner)) {
+      logger.info("Don't start the EmbeddedWorker");
 
-     List<AbstractRunner> listSdkRunners = listRunners.stream()
+      // remove from the list the embeddedRunner
+      listRunners = listRunners.stream().filter(t -> {
+        return !isEmbeddedWorker(t);
+      }).toList();
+    }
+    if (Boolean.FALSE.equals(executePingRunner)) {
+      logger.info("Don't start the PingWorker");
+      // remove from the list the embeddedRunner
+      listRunners = listRunners.stream().filter(t -> {
+        return !isPingWorker(t);
+      }).toList();
+    }
+
+    List<AbstractRunner> listSdkRunners = listRunners.stream()
         .filter(t -> t instanceof SdkRunnerConnector)
-        .collect(Collectors.toList());
+        .filter(t -> !(t instanceof SdkRunnerCherryConnector))
+        .toList();
     List<AbstractRunner> listSdkCherryRunners = listRunners.stream()
         .filter(t -> t instanceof SdkRunnerCherryConnector)
-        .collect(Collectors.toList());
+        .toList();
     List<AbstractRunner> listOtherRunners = listRunners.stream()
         .filter(element -> !listSdkRunners.contains(element))
         .filter(element -> !listSdkCherryRunners.contains(element))
-        .collect(Collectors.toList());
+        .toList();
 
     logger.info("--- SdkRunner to start (active runner only)");
     for (AbstractRunner runner : listSdkRunners) {
@@ -129,13 +175,12 @@ public class JobRunnerFactory {
     }
     logger.info("---");
 
-
     for (AbstractRunner runner : listRunners) {
 
       try {
         JobWorker jobWorker = createJobWorker(runner);
         if (jobWorker != null) {
-          logOperation.log(OperationEntity.Operation.STARTRUNNER, runner, "Started[" + runner.getType()+"]");
+          logOperation.log(OperationEntity.Operation.STARTRUNNER, runner, "Started[" + runner.getType() + "]");
 
           mapRunning.put(runner.getType(), new Running(runner, new ContainerJobWorker(jobWorker)));
         }
@@ -146,20 +191,21 @@ public class JobRunnerFactory {
     }
   }
 
-  public void stopAll() {
-    logOperation.log(OperationEntity.Operation.STOPRUNTIME, "");
-
+  /**
+   *
+   */
+  public void suspendAllRunners() {
     for (Running running : mapRunning.values()) {
       if (running.runner != null) {
         try {
           stopRunner(running.runner.getIdentification());
 
         } catch (Exception e) {
-          logger.error("ControllerPage on runner [" + running.runner.getIdentification() + "] : " + e);
+          logger.error("ControllerPage on runner [{}] : {}", running.runner.getIdentification(), e);
         }
       }
     }
-    zeebeContainer.stopZeebeeClient();
+
   }
 
   /**
@@ -245,7 +291,7 @@ public class JobRunnerFactory {
       try {
         jobWorker = createJobWorker(running.runner);
       } catch (OperationException e) {
-        logger.error("Can't restart [" + running.runner.getName() + "] " + e.getMessage());
+        logger.error("Can't restart [{}] : {} ", running.runner.getName(), e.getMessage());
       }
       running.containerJobWorker.setJobWorker(jobWorker);
     }
@@ -280,9 +326,15 @@ public class JobRunnerFactory {
    */
   private JobWorker createJobWorker(AbstractRunner runner) throws OperationException {
 
+    if (runner.getName().contains("PDF")) {
+      JobWorker creditCardWorker = zeebeContainer.getZeebeClient()
+          .newWorker()
+          .jobType("c-pdf-convert-to")
+          .handler(new CreditDeductionWorker())
+          .open();
+      return creditCardWorker;
+    }
     JobHandler jobHandler;
-
-
 
     if (runner instanceof AbstractWorker abstractWorker)
       jobHandler = abstractWorker;
@@ -290,26 +342,26 @@ public class JobRunnerFactory {
       jobHandler = new CherryConnectorJobHandler(abstractConnector, historyFactory, secretProvider, validationProvider,
           objectMapper);
     } else if (runner instanceof SdkRunnerConnector sdkRunnerConnector) {
-      jobHandler = new CherryConnectorJobHandler(sdkRunnerConnector, historyFactory, secretProvider, validationProvider, objectMapper);
+      jobHandler = new CherryConnectorJobHandler(sdkRunnerConnector, historyFactory, secretProvider, validationProvider,
+          objectMapper);
     } else if (runner instanceof SdkRunnerWorker sdkRunnerWorker) {
       jobHandler = new CherryWorkerJobHandler(sdkRunnerWorker, historyFactory, secretProvider);
     } else {
       throw new OperationException(UNKNOWN_RUNNER_CLASS, "Unknown AbstractRunner class");
     }
-      JobWorkerBuilderStep1.JobWorkerBuilderStep3 jobWorkerBuild3 = zeebeContainer.getZeebeClient()
-          .newWorker()
-          .jobType(runner.getType())
-          .handler(jobHandler)
-          .name(runner.getName() == null ? runner.getType() : runner.getName());
+    JobWorkerBuilderStep1.JobWorkerBuilderStep3 jobWorkerBuild3 = zeebeContainer.getZeebeClient()
+        .newWorker()
+        .jobType(runner.getType())
+        .handler(jobHandler)
+        .name(runner.getName() == null ? runner.getType() : runner.getName());
 
     // jobWorkerBuild3.maxJobsActive()
 
-
-      List<String> listVariablesInput = runner.getListFetchVariables();
-      if (listVariablesInput != null && ! listVariablesInput.isEmpty()) {
-        jobWorkerBuild3.fetchVariables(listVariablesInput);
-      }
-      return jobWorkerBuild3.open();
+    List<String> listVariablesInput = runner.getListFetchVariables();
+    if (listVariablesInput != null && !listVariablesInput.isEmpty()) {
+      jobWorkerBuild3.fetchVariables(listVariablesInput);
+    }
+    return jobWorkerBuild3.open();
 
   }
 
@@ -335,10 +387,32 @@ public class JobRunnerFactory {
   record Running(AbstractRunner runner, ContainerJobWorker containerJobWorker) {
   }
 
-  private String logListRunners(List<AbstractRunner> listRunners ) {
-  return listRunners.stream().map(t -> {
-      return t.getName() + "(" + t.getType() + ")";})
-      .collect(Collectors.joining(";"));
+  @Scheduled(fixedDelay = 30000)
+  public void checkZeebeConnection() {
+    boolean checkConnection = zeebeContainer.retryConnection();
+    // if the connection is false, pause all runners
 
+    // if the connection is true, resume all runners which need to be resume
+
+  }
+
+  private boolean isEmbeddedWorker(AbstractRunner runner) {
+    return runner instanceof IntFrameworkRunner;
+  }
+
+  private boolean isPingWorker(AbstractRunner runner) {
+    if (runner instanceof SdkRunnerWorker)
+      return ((SdkRunnerWorker) runner).getWorker() instanceof PingIntRunner;
+    return runner instanceof PingIntRunner;
+  }
+
+  public class CreditDeductionWorker implements JobHandler {
+
+    Logger LOGGER = LoggerFactory.getLogger(CreditDeductionWorker.class);
+
+    @Override
+    public void handle(JobClient client, ActivatedJob job) throws Exception {
+      logger.info("YES");
     }
+  }
 }
